# DNA-Distillation

./: .gitignore  Makefile  PRODUCTION_GUIDE.md  README.md  RELEASE_PROCESS.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: ci.yml  main.yml  pr_checks.yml  release.yml
dna_distillation/: __init__.py  cli.py
dna_distillation/data/: __init__.py  datasets.py  preprocessing.py
dna_distillation/distillation/: __init__.py  core.py  distiller.py  losses.py  trainers.py  utils.py
dna_distillation/models/: __init__.py  advanced_models.py  student_models.py
dna_distillation/training/: __init__.py  core.py  trainers.py  utils.py
dna_distillation/utils/: __init__.py  config.py  constants.py  helpers.py  slurm.py
docs/source/: conf.py  index.md  installation.md
envs/: README.md  caduceus-req.txt  dnabert2-req.txt  enformer-req.txt  nt500m-req.txt
scripts/: prepare_changelog.py  release.sh  release_notes.py  train_caduceus_uv.sh  train_dnabert2_uv.sh  train_enformer_uv.sh  train_nt500m_uv.sh
tests/: test_data_module.py  test_models.py  test_package_import.py
