[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "dna-distillation"
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org"}
]
requires-python = ">=3.8"
dependencies = [
    # Core scientific computing
    "numpy>=1.20.0,<2.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
    
    # DNA/Genomics specific
    "biopython>=1.80",
    "pysam>=0.20.0",
    "pyfaidx>=0.8.0",
    
    # Machine learning and AI
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "tokenizers>=0.13.0",
    
    # Data processing and visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    
    # Utilities
    "tqdm>=4.60.0",
    "rich>=12.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/kainoanishida/DNA-Distillation"
Repository = "https://github.com/kainoanishida/DNA-Distillation"
Changelog = "https://github.com/kainoanishida/DNA-Distillation/blob/main/CHANGELOG.md"
# Documentation = "https://dna-distillation.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0,<2.0",
    "black>=23.0,<25.0",
    "isort>=5.12,<5.14",
    "pytest",
    "pytest-sphinx",
    "pytest-cov",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "Sphinx>=6.0,<9.0",
    "furo==2024.8.6",
    "myst-parser>=1.0",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints==1.23.3",
    "packaging"
]

# Additional optional dependency groups
ml = [
    "scikit-learn>=1.0.0",
    "optuna>=3.0.0",
    "wandb>=0.15.0",
    "tensorboard>=2.10.0",
]

gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchmetrics>=0.10.0",
]

bio = [
    "biopython>=1.80",
    "pysam>=0.20.0",
    "pyfaidx>=0.8.0",
    "spliceai>=1.3.0",
]

viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "bokeh>=3.0.0",
]

# Optional: Nucleotide Transformer (if available)
nucleotide = [
    "nucleotide-transformer>=0.0.1",
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
dna_distillation = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "dna_distillation.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py39"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
