[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "dna-distillation"
dynamic = ["version"]
description = "A comprehensive Python package for DNA sequence analysis, machine learning, and bioinformatics processing"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org"}
]
keywords = ["dna", "genomics", "bioinformatics", "machine-learning", "sequence-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    # Core scientific computing
    "numpy>=1.20.0,<3.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
    
    # DNA/Genomics specific
    "biopython>=1.80",
    "pysam>=0.20.0",
    "pyfaidx>=0.8.0",
    
    # Machine learning and AI
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "tokenizers>=0.13.0",
    
    # Data processing and visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    
    # Utilities
    "tqdm>=4.60.0",
    "rich>=12.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "tyro>=0.5.0",
]

[project.scripts]
dna-distill = "dna_distillation.cli:main"

[project.urls]
Homepage = "https://github.com/kainoanishida/DNA-Distillation"
Repository = "https://github.com/kainoanishida/DNA-Distillation"
Changelog = "https://github.com/kainoanishida/DNA-Distillation/blob/main/CHANGELOG.md"
# Documentation = "https://dna-distillation.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.0,<2.0",
    "black>=23.0,<25.0",
    "isort>=5.12,<5.14",
    "pytest>=8.4.1",
    "pytest-sphinx",
    "pytest-cov",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "Sphinx>=6.0,<9.0",
    "furo==2024.8.6",
    "myst-parser>=1.0",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints==1.23.3",
    "packaging"
]

# Additional optional dependency groups
ml = [
    "scikit-learn>=1.0.0",
    "optuna>=3.0.0",
    "wandb>=0.15.0",
    "tensorboard>=2.10.0",
]

gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchmetrics>=0.10.0",
]

bio = [
    "biopython>=1.80",
    "pysam>=0.20.0",
    "pyfaidx>=0.8.0",
    "spliceai>=1.3.0",
]

viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "bokeh>=3.0.0",
]

# Optional: Nucleotide Transformer (if available)
nucleotide = [
    "nucleotide-transformer>=0.0.1",
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*",
    "research_code*"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
dna_distillation = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "dna_distillation.version.VERSION"}

# Enhanced Ruff configuration (similar to the model)
[tool.ruff]
# Specify the Python version you're targeting
target-version = "py38"

# Set the maximum line length
line-length = 100

# Enable auto-fixing for specific rule categories
fix = true

# Directories to include/exclude
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.ipynb",                    # Exclude notebooks from ruff checks
    "docs/",
    "scripts/",
]

[tool.ruff.lint]
# Enable additional rule sets for better code quality
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]

# Ignore specific rules that might be too strict for scientific computing
ignore = [
    "F405",   # may be undefined, or defined from star imports
    "F403",   # unable to detect undefined names from star imports
    "E741",   # ambiguous variable name
    "E712",   # comparison to True should be cond is True
    "B008",   # do not perform function calls in argument defaults
    "UP007",  # use X | Y for type annotations (not compatible with older Python)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
"tests/*.py" = ["E501"]   # Allow longer lines in tests

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use trailing commas
skip-magic-trailing-comma = false

# Indent with spaces
indent-style = "space"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
    | docs
    | scripts
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["dna_distillation"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped defs for scientific code
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_classes = [
  "Test*",
  "*Test"
]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
include = ["dna_distillation"]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
pythonVersion = "3.8"
pythonPlatform = "Linux"
